--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
 <meta charset="UTF-8">
 <title>ZeroTo1Million</title>
 <style>
-body { background-color: black; color: white; text-align:center; font-family: Arial, sans-serif; }
-#counter { font-size: 80px; margin-top: 100px; }
-button { font-size: 30px; padding: 20px 40px; background:black; color:white; border:2px solid white; cursor:pointer; margin-top:20px; }
+body {
+  background-color: black;
+  color: white;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  height: 100vh;           /* Ocupa toda la altura de la ventana */
+  display: flex;           
+  flex-direction: column;   /* Organiza verticalmente */
+  justify-content: center;  /* Centrado vertical */
+  align-items: center;      /* Centrado horizontal */
+}
+#counter {
+  font-size: 80px;
+  margin: 20px 0;           /* Espacio arriba y abajo */
+}
+button {
+  font-size: 30px;
+  padding: 20px 40px;
+  background: black;
+  color: white;
+  border: 2px solid white;
+  cursor: pointer;
+  margin-top: 20px;
+}
 </style>
 </head>
 <body>
@@ -19,7 +40,6 @@ button { font-size: 30px; padding: 20px 40px; background:black; color:white; bor
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <script>
-  // Pega aquí tu firebaseConfig de tu Web App de Firebase
   const firebaseConfig = {
     apiKey: "TU_API_KEY",
     authDomain: "TU_PROYECTO.firebaseapp.com",
@@ -33,7 +53,6 @@ button { font-size: 30px; padding: 20px 40px; background:black; color:white; bor
   const db = firebase.firestore();
   const docRef = db.collection("contador").doc("global");
 
-  // Mostrar valor inicial
   docRef.onSnapshot(doc => {
     if(doc.exists){
       document.getElementById("counter").innerText = doc.data().clicks;
